@@ -4,7 +4,7 @@
     <string name="stop">Stop</string>
     <string name="start_again">Start again</string>
     <string name="press_start">Press the button below to begin tracking</string>
-    <string name="tracking">Tracking</string>
+    <string name="tracking">Tracking, started on %s</string>
     <string name="stopped_on">Stopped on</string>
     <string name="started_on">Started on</string>
     <string name="slept_for_label">Slept for</string>
